[core] various fixes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ go:
 addons:
     apt:
         packages:
-            - hwloc
+            - libhwloc-dev
 
 install:
     - go get github.com/sirupsen/logrus
