--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ addons:
 
 install:
     - go get github.com/sirupsen/logrus
-    - go get github.com/fsouza/go-dockerclient
+    - go get github.com/docker/engine-cli
     - go get gopkg.in/urfave/cli.v2
