[core] more deps.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
             - libhwloc-dev
 
 install:
-    - go get github.com/sirupsen/logrus
+    - go get golang.org/x/net/context
+    - go get github.com/Sirupsen/logrus
     - go get github.com/docker/engine-api
     - go get gopkg.in/urfave/cli.v2
